gcc/testsuite/rust/rustc/ui/extern/issue-95829_dg.rs
// { dg-additional-options "-frust-edition=2018" }

extern {
    async fn L() { // { dg-error "" "" { target *-*-* } }
// { dg-error "" "" { target *-*-* } .-1 }
        async fn M() {}
    }
}

fn main() {}

